[project]
name = "15minute-city"
version = "0.1.0"
description = "A Python library and API for urban mobility metrics."
readme = "README.md"
authors = [
    { name = "Pedro Jesus", email = "pedrohenriquedejesus0419@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.5",
    "geoalchemy2>=0.20.0",
    "networkx>=3.4.2",
    "osmnx>=2.0.7",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.51",
    "typer>=0.26.8",
]

[project.scripts]
fifteen-minute-city = "fifteen_minute_city:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fifteen_minute_city"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.15.20",
]
